--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-text">
+            <h1>
+                <span class="main-header-text">ArcadeLandingPage</span>
+                <span class="sub-header-text">The Ultimate Arcade</span>
+            </h1>
+        </div>
+    </div>
 </body>
 </html>
