--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <span class="sub-header-text">The Ultimate Arcade</span>
             </h1>
         </div>
+        <a>RSVP</a>
     </div>
 </body>
 </html>
