Update anchor tag with href

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span class="sub-header-text">The Ultimate Arcade</span>
             </h1>
         </div>
-        <a>RSVP</a>
+        <a href="#">RSVP</a>
     </div>
 </body>
 </html>
