--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArcadeLandingPage</title>
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="header">
-        <div class="header-text">
-            <h1>
-                <span class="main-header-text">Arcade Landing Page</span>
-                <span class="sub-header-text">The Ultimate Arcade</span>
-            </h1>
-        </div>
-        <a href="#">RSVP</a>
+      <div class="header-text">
+        <h1>
+          <span class="main-header-text">Arcade Landing Page</span>
+          <span class="sub-header-text">The Ultimate Arcade</span>
+        </h1>
+        <a href="#" class="btn btn-white">rsvp</a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
