--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <span class="main-header-text">Arcade Landing Page</span>
           <span class="sub-header-text">The Ultimate Arcade</span>
         </h1>
-        <a href="#" class="btn btn-white">rsvp</a>
+        <a href="#" class="btn btn-white btn-animated">rsvp</a>
       </div>
     </div>
   </body>
