Refactor to use BEM

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-text">
+      <div class="header__text">
         <h1>
-          <span class="main-header-text">Arcade Landing Page</span>
-          <span class="sub-header-text">The Ultimate Arcade</span>
+          <span class="heading-main-text">Arcade Landing Page</span>
+          <span class="heading-sub-text">The Ultimate Arcade</span>
         </h1>
-        <a href="#" class="btn btn-white btn-animated">rsvp</a>
+        <a href="#" class="btn btn--white btn--animated">rsvp</a>
       </div>
     </div>
   </body>
