--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
   </head>
   <body>
-    <div class="header">
+    <header class="header">
       <div class="header__text">
         <h1>
           <span class="heading-main-text">Arcade Landing Page</span>
@@ -19,6 +19,6 @@
         </h1>
         <a href="#" class="btn btn--white btn--animated">rsvp</a>
       </div>
-    </div>
+    </header>
   </body>
 </html>
