--- a/index.html
+++ b/index.html
@@ -11,14 +11,35 @@
     />
   </head>
   <body>
+
     <header class="header">
       <div class="header__text">
-        <h1>
-          <span class="heading-main-text">Arcade Landing Page</span>
-          <span class="heading-sub-text">The Ultimate Arcade</span>
+        <h1 class="heading-primary">
+          <span class="heading-primary--main">Arcade Landing Page</span>
+          <span class="heading-primary--sub">The Ultimate Arcade</span>
         </h1>
         <a href="#" class="btn btn--white btn--animated">rsvp</a>
       </div>
     </header>
+
+    <main>
+        <section class="section-about">
+          <div class="u-center-text u-margin-bottom-8">
+            <h2 class="heading-secondary">
+              Awesome arcade fun for everyone
+            </h2>
+          </div>
+
+          <div class="row u-center-text">
+            <div class="col-1-of-2">
+              Text Content
+            </div>
+            <div class="col-1-of-2">
+              Image composition
+            </div>
+          </div>
+        </section>
+    </main>
+    
   </body>
 </html>
