Add content for about section

--- a/index.html
+++ b/index.html
@@ -24,15 +24,20 @@
 
     <main>
         <section class="section-about">
-          <div class="u-center-text u-margin-bottom-8">
+          <div class="u-center-text u-margin-bottom-lg">
             <h2 class="heading-secondary">
               Awesome arcade fun for everyone
             </h2>
           </div>
 
-          <div class="row u-center-text">
+          <div class="row">
             <div class="col-1-of-2">
-              Text Content
+              <h3 class="heading-tertiary u-margin-bottom-sm">The best arcades for the nostalgic gamers</h3>
+              <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, nihil dolorum eaque non sit ratione, eligendi obcaecati odit ea ipsum repudiandae, id explicabo maiores! Nisi non rem ea maiores consequatur.</p>
+              <h3 class="heading-tertiary u-margin-bottom-sm">From classic fighting games to beat em ups, we have them all</h3>
+              <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt id tempora fuga ea voluptate numquam ipsa deserunt eos accusamus, dolorum suscipit mollitia deleniti accusantium, veniam rem! Cum magnam ratione nisi?</p>
+              <a href="#" class="btn-text">Learn More &rarr;</a>
+
             </div>
             <div class="col-1-of-2">
               Image composition
