Finish composition section with images and add features section

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ArcadeLandingPage</title>
+    <link rel="stylesheet" href="./css/icon-fonts.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/606d3533c3.js" crossorigin="anonymous"></script>
   </head>
   <body>
 
@@ -36,14 +38,31 @@
               <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, nihil dolorum eaque non sit ratione, eligendi obcaecati odit ea ipsum repudiandae, id explicabo maiores! Nisi non rem ea maiores consequatur.</p>
               <h3 class="heading-tertiary u-margin-bottom-sm">From classic fighting games to beat em ups, we have them all</h3>
               <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt id tempora fuga ea voluptate numquam ipsa deserunt eos accusamus, dolorum suscipit mollitia deleniti accusantium, veniam rem! Cum magnam ratione nisi?</p>
+              
               <a href="#" class="btn-text">Learn More &rarr;</a>
 
             </div>
             <div class="col-1-of-2">
-              Image composition
+              <div class="composition">
+                <img src="./images/arc-2.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+                <img src="./images/arc-3.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+                <img src="./images/arc-4.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+              </div>
             </div>
           </div>
         </section>
+
+        <secttion class="section-features">
+            <div class="row">
+              <col-1-of-4>
+                <div class="feature-box">
+                  <i class="feature-box__icon fas fa-gamepad"></i>
+                  <h3 class="heading-tertiary">Classic Arcades</h3>
+                  <p class="feature-box__text">Lorem ipsum dolor sit?</p>
+                </div>
+              </col-1-of-4>
+            </div>
+        </secttion>
     </main>
     
   </body>
