--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="col-1-of-4">
                 <div class="feature-box">
                   <i class="feature-box__icon fas fa-gamepad" style="color: #52057b"></i>
-                  <h3 class="heading-tertiary u-margin-bottom-sm">Classic Arcades</h3>
+                  <h3 class="heading-tertiary u-margin-bottom-sm">Maximum Spider!</h3>
                   <p class="feature-box__text">Lorem ipsum dolor sit? Sit amet consectetur adipisicing elit. Eligendi obcaecati odit</p>
                 </div>
             </div>
@@ -83,7 +83,7 @@
         <div class="col-1-of-4">
           <div class="feature-box">
             <i class="feature-box__icon fas fa-gamepad" style="color: #52057b"></i>
-            <h3 class="heading-tertiary u-margin-bottom-sm">Cowabunga!</h3>
+            <h3 class="heading-tertiary u-margin-bottom-sm">Big Apple 3AM</h3>
             <p class="feature-box__text">Lorem ipsum dolor sit? Sit amet consectetur adipisicing elit. Eligendi obcaecati odit</p>
           </div>
         </div>
