--- a/index.html
+++ b/index.html
@@ -153,10 +153,26 @@
         <div class="row">
           <div class="col-1-of-3">
             <div class="card">
-              <div class="card__side card__side--front card__side--front-1">
-                TEXT
+              <div class="card__side card__side--front card__side--front--1">
+                <div class="card__picture card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                    Fighting Games
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Marvel VS Capcom 2</li>
+                    <li>Ultimate MK 3</li>
+                    <li>Capcom vs SNK 2</li>
+                    <li>King of Fighters 98</li>
+                    <li>Street Fighter 3rd Strike</li>
+                  </ul>
+                </div>
               </div>
-              <div class="card__side card__side--back card__side--back-1">
+              <div class="card__side card__side--back card__side--back--1">
                 TEXT
               </div>
             </div>
