Add markup for other cards

--- a/index.html
+++ b/index.html
@@ -173,17 +173,77 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back--1">
-                TEXT
+                <div class="card__cta">
+                  <p>This arcade has some of the best fighting games of all time. From classics like X-Men vs Street Fighter to brawlers like Power Stone.</p>
+                  <a href="#" class="btn btn--white">Find Out More</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              <div class="card__side card__side--front card__side--front--2">
+                <div class="card__picture card__picture--2">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                    Racing Games
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Daytona USA</li>
+                    <li>Max TT Superbike</li>
+                    <li>Cruisin USA</li>
+                    <li>Grand Turismo</li>
+                    <li>Sega Rally Championship</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--2">
+                <div class="card__cta">
+                  <p>This arcade has some of the best racing games. Daytooooonaaaa!!!!</p>
+                  <a href="#" class="btn btn--white">Find Out More</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-1-of-3">
-            Col 1 of 3
+            <div class="card">
+              <div class="card__side card__side--front card__side--front--3">
+                <div class="card__picture card__picture--3">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                    Shooting Games
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>Lethal Enforcers 2: Gun Fighters</li>
+                    <li>Time Crisis</li>
+                    <li>Virtua Cop</li>
+                    <li>Carnevil</li>
+                    <li>House Of The Dead 2</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back--3">
+                <div class="card__cta">
+                  <p>Some of the best arcade shooters around. Get ready to shoot bandits and zombies, and don't forget to reload!</p>
+                  <a href="#" class="btn btn--white">Find Out More</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
+        <div class="u-center-text u-margin-bottom-lg ">
+          <a href="#" class="btn btn--purple btn--lg btn--animated">RSVP Now!</a>
+        </div>
+
       </section>
       <!---------------- ARCADES ------------------->
   
