Change inline style of the font awesome icons

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="feature-box">
               <i
                 class="feature-box__icon fas fa-gamepad"
-                style="color: #52057b"
+                style="color: #0ba366"
               ></i>
               <h3 class="heading-tertiary u-margin-bottom-sm">
                 Maximum Spider!
@@ -104,7 +104,7 @@
             <div class="feature-box">
               <i
                 class="feature-box__icon fas fa-gamepad"
-                style="color: #52057b"
+                style="color: #0ba366"
               ></i>
               <h3 class="heading-tertiary u-margin-bottom-sm">LP LP F LK HP</h3>
               <p class="feature-box__text">
@@ -117,7 +117,7 @@
             <div class="feature-box">
               <i
                 class="feature-box__icon fas fa-gamepad"
-                style="color: #52057b"
+                style="color: #0ba366"
               ></i>
               <h3 class="heading-tertiary u-margin-bottom-sm">
                 Welcome to your doom!
@@ -132,7 +132,7 @@
             <div class="feature-box">
               <i
                 class="feature-box__icon fas fa-gamepad"
-                style="color: #52057b"
+                style="color: #0ba366"
               ></i>
               <h3 class="heading-tertiary u-margin-bottom-sm">Big Apple 3AM</h3>
               <p class="feature-box__text">
@@ -241,7 +241,7 @@
         </div>
 
         <div class="u-center-text u-margin-bottom-lg ">
-          <a href="#" class="btn btn--purple btn--lg btn--animated">RSVP Now!</a>
+          <a href="#" class="btn btn--green btn--lg btn--animated">RSVP Now!</a>
         </div>
 
       </section>
