Add markup for stories

--- a/index.html
+++ b/index.html
@@ -245,7 +245,34 @@
         </div>
 
       </section>
-      <!---------------- ARCADES ------------------->
+      <!---------------- ARCADES -------------------->
+
+      <!---------------- STORIES -------------------->
+      <section class="section-stories">
+        <div class="u-center-text">
+          <h2 class="heading-secondary">
+            Everyone loves arcades!
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="./images/story-1.jpg" alt="photo-1" class="story__image">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-sm">
+                So many classic games.
+              </h3>
+              <p>
+               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui saepe quam earum amet, doloribus recusandae voluptas accusamus voluptate. Molestias esse modi impedit pariatur fugit fugiat placeat numquam voluptatum atque ducimus.
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </section>
+      <!---------------- STORIES -------------------->
   
       <!---------------- MAIN SECTION ---------------->
     </main>
