Add second story and button

--- a/index.html
+++ b/index.html
@@ -256,9 +256,26 @@
         </div>
 
         <div class="row">
+          
           <div class="story">
             <figure class="story__shape">
               <img src="./images/story-1.jpg" alt="photo-1" class="story__image">
+              <figcaption class="story__caption">Joanna Dark</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-sm">
+                So many classic games.
+              </h3>
+              <p>
+               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui saepe quam earum amet, doloribus recusandae voluptas accusamus voluptate. Molestias esse modi impedit pariatur fugit fugiat placeat numquam voluptatum atque ducimus.
+              </p>
+            </div>
+          </div>
+
+          <div class="story">
+            <figure class="story__shape">
+              <img src="./images/story-2.jpg" alt="photo-2" class="story__image">
+              <figcaption class="story__caption">DJ Aniki</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-sm">
@@ -270,7 +287,10 @@
             </div>
           </div>
         </div>
+        <div class="u-center-text">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
 
+        </div>
       </section>
       <!---------------- STORIES -------------------->
   
