Add markup for video

--- a/index.html
+++ b/index.html
@@ -249,6 +249,13 @@
 
       <!---------------- STORIES -------------------->
       <section class="section-stories">
+        <div class="bg-video">
+            <video class="bg-video__content" autoplay muted loop>
+              <source src="/images/video.mp4" type="video/mp4">
+              Your browser is not supported!
+            </video>
+        </div>
+
         <div class="u-center-text">
           <h2 class="heading-secondary">
             Everyone loves arcades!
@@ -289,7 +296,6 @@
         </div>
         <div class="u-center-text">
           <a href="#" class="btn-text">Read all stories &rarr;</a>
-
         </div>
       </section>
       <!---------------- STORIES -------------------->
