--- a/index.html
+++ b/index.html
@@ -299,7 +299,56 @@
         </div>
       </section>
       <!---------------- STORIES -------------------->
-  
+
+      <!---------------- BOOKING -------------------->
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <div class="u-margin-bottom-med">
+                <h2 class="heading-secondary">RSVP now</h2>
+              </div>
+              <form action="#" class="form">
+                <div class="form__group">
+                  <input type="text" class="form__input" placeholder="Full Name" id="name" required> 
+                  <label for="name" class="form__label">Full name</label>
+                </div>
+
+                <div class="form__group">
+                  <input type="email" class="form__input" placeholder="Email Address" id="email" required> 
+                  <label for="email" class="form__label">Email Address</label>
+                </div>
+
+                <div class="form__group">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="half" name="size">
+                    <label for="half" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      Half Day
+                    </label>
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <div class="form__radio-group">
+                    <input type="radio" class="form__radio-input" id="all" name="size">
+                    <label for="all" class="form__radio-label">
+                      <span class="form__radio-button"></span>
+                      All Day
+                    </label>
+                  </div>
+                </div>
+
+                <div class="form__group">
+                  <button class="btn btn--green u-margin-top-md">Next step &rarr;</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!---------------- BOOKING -------------------->
+
       <!---------------- MAIN SECTION ---------------->
     </main>
   </body>
