--- a/index.html
+++ b/index.html
@@ -351,5 +351,39 @@
 
       <!---------------- MAIN SECTION ---------------->
     </main>
+
+    <div class="footer">
+      <div class="footer__logo-box">
+        <img src="./images/logo-1.png" alt="Full logo" class="footer__logo">
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Designed By <a href="" class="footer__link">Lorem.</a> Copyright &copy; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam voluptatibus cum soluta eos minima natus repudiandae porro alias explicabo.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
