--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
     </header>
     <!---------------- HEADER --------------------->
 
-    <!---------------- MAIN SECTION ---------------->
-
     <main>
       <!---------------- ABOUT --------------------->
       <section class="section-about">
@@ -348,10 +346,9 @@
         </div>
       </section>
       <!---------------- BOOKING -------------------->
-
-      <!---------------- MAIN SECTION ---------------->
     </main>
 
+     <!---------------- FOOTER ---------------->
     <div class="footer">
       <div class="footer__logo-box">
         <img src="./images/logo-1.png" alt="Full logo" class="footer__logo">
@@ -385,5 +382,7 @@
         </div>
       </div>
     </div>
+    <!---------------- FOOTER ---------------->
+
   </body>
 </html>
