Add markup for popup

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="card__side card__side--back card__side--back--1">
                 <div class="card__cta">
                   <p>This arcade has some of the best fighting games of all time. From classics like X-Men vs Street Fighter to brawlers like Power Stone.</p>
-                  <a href="#" class="btn btn--white">Find Out More</a>
+                  <a href="#popup" class="btn btn--white">Find Out More</a>
                 </div>
               </div>
             </div>
@@ -220,7 +220,7 @@
               <div class="card__side card__side--back card__side--back--2">
                 <div class="card__cta">
                   <p>This arcade has some of the best racing games. Daytooooonaaaa!!!!</p>
-                  <a href="#" class="btn btn--white">Find Out More</a>
+                  <a href="#popup" class="btn btn--white">Find Out More</a>
                 </div>
               </div>
             </div>
@@ -249,7 +249,7 @@
               <div class="card__side card__side--back card__side--back--3">
                 <div class="card__cta">
                   <p>Some of the best arcade shooters around. Get ready to shoot bandits and zombies, and don't forget to reload!</p>
-                  <a href="#" class="btn btn--white">Find Out More</a>
+                  <a href="#popup" class="btn btn--white">Find Out More</a>
                 </div>
               </div>
             </div>
@@ -394,6 +394,26 @@
           <p class="footer__copyright">
             Designed By <a href="" class="footer__link">Lorem.</a> Copyright &copy; Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam voluptatibus cum soluta eos minima natus repudiandae porro alias explicabo.
           </p>
+        </div>
+      </div>
+    </div>
+
+    <!-------------------POPUP---------------------->
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="./images/arc-8.jpg" alt="First photo" class="popup__img">
+          <img src="./images/arc-9.jpg" alt="Second photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+          <a href="#section-arcades" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-sm">Reserve your spot now</h2>
+          <h3 class="heading-tertiary u-margin-bottom-sm">Important &ndash; Lorem ipsum.</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptatum beatae dicta ut quisquam iste deleniti! Nam asperiores odio accusantium eos! Eos ullam atque ducimus architecto. Voluptates reprehenderit facilis commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptatum beatae dicta ut quisquam iste deleniti! Nam asperiores odio accusantium eos! Eos ullam atque ducimus architecto. Voluptates reprehenderit facilis commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptatum beatae dicta ut quisquam iste deleniti! Nam asperiores odio accusantium eos! Eos ullam atque ducimus architecto. Voluptates reprehenderit facilis commodi. Voluptates reprehenderit facilis commodi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem voluptatum beatae dicta ut quisquam iste deleniti!
+          </p>
+          <a href="#" class="btn btn--green btn--md">RSVP now</a>
         </div>
       </div>
     </div>
