Change name of the site

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header class="header">
       <div class="header__text">
         <h1 class="heading-primary">
-          <span class="heading-primary--main">Arcade Landing Page</span>
+          <span class="heading-primary--main">Arcades</span>
           <span class="heading-primary--sub">The Ultimate Arcade</span>
         </h1>
         <a href="#" class="btn btn--white btn--animated">rsvp</a>
