--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <ul class="navigation__list">
           <li class="navigation__item"><a href="#" class="navigation__link">About Arcade</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link">Pupular games</a></li>
+          <li class="navigation__item"><a href="#" class="navigation__link">Popular games</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link">RSVP</a></li>
         </ul>
